Source/JavaScriptCore/jsc.cpp
@@ -1931,6 +1931,11 @@ int main(int argc, char** argv)
     ecore_init();
 #endif
 
+#if PLATFORM(GTK)
+    if (!setlocale(LC_ALL, ""))
+        WTFLogAlways("Locale not supported by C library.\n\tUsing the fallback 'C' locale.");
+#endif
+
     // Need to initialize WTF threading before we start any threads. Cannot initialize JSC
     // threading yet, since that would do somethings that we'd like to defer until after we
     // have a chance to parse options.
